// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AstRenderer fillWithId should parse and fill id for multiple nested style. 1`] = `
"#element { display: flex; }
#element:hover { color: red; }
#element:hover .inner { color: black; }
#element .wrapper { color: blue; }
#element .wrapper .inner { color: green; }
@media (max-width: 200px) {
  #element { display: inline-flex; }
  #element .inner { color: yellow; }
}"
`;

exports[`AstRenderer fillWithId should parse style and fill id. 1`] = `
"#element { display: flex; }
#element:hover { color: red; }
#element .wrapper { color: blue; }
@media (max-width: 200px) {
  #element { display: inline-flex; }
}
@keyframes keyframe-name {
  0% { height: 10px; }
  100% { height: 100px; }
}"
`;

exports[`AstRenderer fillWithId should real pattern 1`] = `
"*[data-zstyl='aaaaa'] { display: flex; gap: 16px; justify-content: center; }
@media (max-width: 940px) {
  *[data-zstyl='aaaaa'] { flex-direction: column; }
}
@keyframes keyframe-name {
  0% { height: 10px; }
  100% { height: 100px; }
}"
`;
